--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Toeristenattractie</title>
 </head>
 <body>
-    <header><h1><u>Bellewaerde</u></h1><img src="https://www.bellewaerde.be/sites/default/files/2022-05/BLW_split-page-park-logo.png" width="200" height="100"></header>
+    <header><h1><u>Bellewaerde</u></h1><img src="https://www.bellewaerde.be/sites/default/files/2022-05/BLW_split-page-park-logo.png" alt="Toeristenattractie" width="200" height="100"></header>
     <nav>
     <a href="https://prpierpont1980.github.io/HuiswerkopgavenLes9/galerij.html" target="_blank">Galerij</a>
     <a href="https://prpierpont1980.github.io/HuiswerkopgavenLes9/index.html" target="_blank">Index</a>
